# agentcore-github-mcp

./: .bedrock_agentcore.yaml  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
src/github_mcp_agentcore/: __init__.py  __main__.py  proxy.py  server.py
